syntax = "proto3";
package fof.v1;

import "google/api/annotations.proto";

option go_package = "github.com/viuts/fof/api/proto/v1;fofv1";

service FlavorService {
  // Clear fog on the map (Send current location path for batching)
  rpc UpdateLocation(UpdateLocationRequest) returns (UpdateLocationResponse) {
    option (google.api.http) = {
      post: "/v1/location"
      body: "*"
    };
  }

  // Get nearby unvisited indie shops (For Quest/Explore mode)
  rpc GetNearbyShops(GetNearbyShopsRequest) returns (GetNearbyShopsResponse) {
    option (google.api.http) = {
      get: "/v1/shops/nearby"
    };
  }

  // Get list of visited shops for highlighting
  rpc GetVisitedShops(GetVisitedShopsRequest) returns (GetVisitedShopsResponse) {
    option (google.api.http) = {
      get: "/v1/shops/visited"
    };
  }

  // Manually register a visit to a shop
  rpc CreateVisit(CreateVisitRequest) returns (CreateVisitResponse) {
    option (google.api.http) = {
      post: "/v1/visits"
      body: "*"
    };
  }

  // Get the cleared area as GeoJSON for the current user
  rpc GetClearedArea(GetClearedAreaRequest) returns (GetClearedAreaResponse) {
    option (google.api.http) = {
      get: "/v1/location/cleared"
    };
  }


  // Get all achievements and user progress
  rpc GetAchievements(GetAchievementsRequest) returns (GetAchievementsResponse) {
    option (google.api.http) = {
      get: "/v1/achievements"
    };
  }
}

message LatLng {
  double lat = 1;
  double lng = 2;
}

message GetClearedAreaRequest {
}

message GetClearedAreaResponse {
  string cleared_area_geojson = 1;
}

message CreateVisitRequest {
  string shop_id = 1;
  int32 rating = 2;
  string comment = 3;
}

message CreateVisitResponse {
  bool success = 1;
  string cleared_area_geojson = 2;
  int32 exp_gained = 3;
  int32 current_exp = 4;
  int32 current_level = 5;
  repeated Achievement unlocked_achievements = 6;
}

message Achievement {
  string id = 1;
  string name = 2;
  string description = 3;
  int32 exp_reward = 4;
  string title_reward = 5;
  string category = 6;
}

message UpdateLocationRequest {
  repeated LatLng path = 1;
  double accuracy = 2;
}

message UpdateLocationResponse {
  bool newly_cleared = 1; // True if new area was unlocked
  string cleared_area_geojson = 2; 
}

message GetNearbyShopsRequest {
  double lat = 1;
  double lng = 2;
  double radius_meters = 3;
  bool exclusive_independent = 4; // Filter for indie shops only
}

message GetNearbyShopsResponse {
  repeated Shop shops = 1;
}

message GetVisitedShopsRequest {
}

message GetVisitedShopsResponse {
  repeated VisitedShop visited_shops = 1;
}

message VisitedShop {
  Shop shop = 1;
  string visited_at = 2; // ISO 8601 string
  int32 rating = 3;
  string comment = 4;
}

message Shop {
  string id = 1;
  string name = 2;
  double lat = 3;
  double lng = 4;
  string category = 5;
  bool is_visited = 6;
  bool is_chain = 7;
  string address = 8;
  string phone = 9;
  string opening_hours = 10;
  repeated string image_urls = 11;
  double rating = 12;
  string source_url = 13;
  double clearance_radius = 14;
}

message GetAchievementsRequest {
}

message GetAchievementsResponse {
  repeated UserAchievementStatus achievements = 1;
}

message UserAchievementStatus {
  Achievement achievement = 1;
  bool is_unlocked = 2;
  int32 current_value = 3; // Current progress count
  int32 target_value = 4;
  string unlocked_at = 5; // ISO string, empty if locked
}
